deactivating all 3 SEE MORE buttons for the moment

--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -43,14 +43,14 @@ related news are warmly welcome. In order to add news to this section, please se
       {{> newsblock}}
       </div>
 
-      <!-- Just Button ince, not working!!! -->
-      {{#unless clickedAll}}
+      <!-- Add later when more News uploaded -->
+      <!-- {{#unless clickedAll}}
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<button class="btn btn-primary page-scroll extra-spacing-bottom js-seeMoreNE">SEE MORE</button>
 				</div>
 			</div>
-      {{/unless}}
+      {{/unless}} -->
 		</div>
 	</section> <!-- ./News&Events -->
 </template>
