--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -159,11 +159,12 @@
 				{{/if}}
 				{{/EasySearch.IfInputEmpty}}
 
-				  <div class="row">
+					<!-- Add later when more News uploaded -->
+					<!-- <div class="row">
             <div class="col-md-12 text-center">
                 <button class="btn btn-primary page-scroll extra-spacing-bottom js-seeMoreMem">SEE MORE</button>
             </div>
-          </div>
+          </div> -->
 			</div> <!-- end container -->
 		</section>
 	</div> <!-- end of overlay -->
