--- a/client/templates/members/bibliographyMembers.html
+++ b/client/templates/members/bibliographyMembers.html
@@ -85,11 +85,11 @@
 					{{/each}}
 				</tbody>
 			</table>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-md-12 text-center">
 					<button href="#" class="btn btn-primary page-scroll extra-spacing-bottom js-seeMoreBib">SEE MORE</button>
 				</div>
-			</div>
+			</div> -->
 		</div>
 
 			{{else}}
@@ -141,11 +141,11 @@
 						{{/EasySearch.Each}}
 						</tbody>
 					</table>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-md-12 text-center">
 							<button href="#" class="btn btn-primary page-scroll extra-spacing-bottom">SEE MORE</button>
 						</div>
-					</div>
+					</div> -->
 				</div>
 				{{/if}}
 			{{/EasySearch.IfInputEmpty}}
