buggy joinus button deactivated

--- a/client/templates/account-templates/joinus.html
+++ b/client/templates/account-templates/joinus.html
@@ -12,7 +12,8 @@
             <h1>YOUR BENEFITS</h1>
             <hr>
             <h2>As a member of OSN you will become part of a thriving network of scholars interested in open strategy. There are many advantages of joining the OSN. Registration is free.</h2>
-            <button type="button" href="#joinus" class="btn btn-primary btn-xl page-scroll js-scrollToForm">JOIN US</button>
+            <!-- deactivating buggy joinus button -->
+            <!-- <button type="button" href="#joinus" class="btn btn-primary btn-xl page-scroll js-scrollToForm">JOIN US</button> -->
         </div>
     </div>
   </header> <!-- ./Stage -->
