picture note for members who registered via a social account

--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -161,7 +161,7 @@
             {{#if profilePic}}
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-                  <label for="beispielFeldDatei">Profile picture</label>
+                  <label for="beispielFeldDatei">Profile picture (loaded from social account )</label>
                 <br>
                 <img class="image profile-thumbnail" src="{{profile.picture}}">
               </div>
