--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -38,7 +38,7 @@
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-6 text-right col-sm-12">
                     <ul class="list-inline quicklinks copyright">
-                        <li><span class="copyright">&copy; Open Strategy Network 2016 <span class="separator">·</span> Made with <i class="fa fa-heart"></i> by <a class="footer-link" href="#" target="_blank" alt="Go to Webgstlt">webgstlt</a></span> </li>
+                        <li><span class="copyright">&copy; Open Strategy Network 2016 <span class="separator">·</span> Made with <i class="fa fa-heart"></i> by <a class="footer-link" href="http://amir-rahbaran.com/webGstlt/" target="_blank" alt="Go to Webgstlt">webgstlt</a></span> </li>
                     </ul>
                 </div>
             </div>
