minor bug fix for search results members

--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -122,7 +122,7 @@
 								<div class="col-sm-6">
 										<div class="media-left">
 												{{#if this.profile.pictureID}}
-												<img class="members-thumbnail" src="{{uploadedPic.url}}" alt="{{profile.firstName}} {{profile.lastName}}">
+												<img class="members-thumbnail" src="{{profile.pictureID}}" alt="{{profile.firstName}} {{profile.lastName}}">
 												{{/if}}
 												{{#if this.profile.picture}}
 												<img class="members-thumbnail" src="{{profile.picture}}" alt="{{profile.firstName}} {{profile.lastName}}">
