get rid of unused id

--- a/client/templates/admin/admin-news-events-lists.html
+++ b/client/templates/admin/admin-news-events-lists.html
@@ -8,9 +8,9 @@
     			{{#each newsEventsData}}
     			<ul class="list-group">
     				<li class="list-group-item">
-    				<a title="Edit" id="js-edit-ne" href="{{pathFor route='adminNewsEventsEdit'}}">{{title}}</a>
+    				<a title="Edit" href="{{pathFor route='adminNewsEventsEdit'}}">{{title}}</a>
     				<!-- edit button -->
-    				<a title="Edit" id="js-edit-ne" class="btn btn-primary admin-button" href="{{pathFor route='adminNewsEventsEdit'}}"><i class="fa fa-pencil-square-o"></i></a>
+    				<a title="Edit" class="btn btn-primary admin-button" href="{{pathFor route='adminNewsEventsEdit'}}"><i class="fa fa-pencil-square-o"></i></a>
     				<!-- delete button -->
     				<a title="Edit" id="js-delete-ne" class="btn btn-danger admin-button" href="#"><i class="fa fa-trash"></i> </a>
     				</li>
