--- a/client/templates/admin/admin-publications-lists.html
+++ b/client/templates/admin/admin-publications-lists.html
@@ -9,11 +9,11 @@
     				{{#each publicationsData}}
     				<ul class="list-group">
     					<li class="list-group-item">
-    					<a title="Edit" id="js-edit-ne" href="{{pathFor route='adminPublicationsEdit'}}">{{title}}</a>
+    					<a title="Edit" href="{{pathFor route='adminPublicationsEdit'}}">{{title}}</a>
     					<!-- edit button -->
-    					<a title="Edit" id="js-edit-ne" class="btn btn-primary admin-button" href="{{pathFor route='adminPublicationsEdit'}}"><i class="fa fa-pencil-square-o"></i></a>
+    					<a title="Edit" class="btn btn-primary admin-button" href="{{pathFor route='adminPublicationsEdit'}}"><i class="fa fa-pencil-square-o"></i></a>
     					<!-- delete button -->
-    					<a title="Edit" id="js-delete-ne" class="btn btn-danger admin-button" href="#"><i class="fa fa-trash"></i> </a>
+    					<a title="Edit" class="js-delete-pub btn btn-danger admin-button" href="#"><i class="fa fa-trash"></i> </a>
     					</li>
     				</ul>
     				{{/each}}
