--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -39,7 +39,7 @@
 
 		<!-- Services Section -->
 		<section id="services">
-			<div class="container">
+			<div class="container-members">
 				{{#EasySearch.IfNoResults index=membersIndex}}
 					<h3>No members found!</h3>
 					<hr class="light">
@@ -119,7 +119,7 @@
 					{{#EasySearch.Each index=membersIndex}}
 
 						<div class="row">
-								<div class="col-sm-6">
+								<div class="col-sm-7">
 										<div class="media-left">
 												{{#if this.profile.pictureID}}
 												<img class="members-thumbnail" src="{{profile.pictureID}}" alt="{{profile.firstName}} {{profile.lastName}}">
@@ -145,7 +145,7 @@
 												</ul>
 										</div>
 								</div>
-								<div class="col-sm-6">
+								<div class="col-sm-4">
 										<div class="media-body">
 												<p class="interests">Interests regarding Open Strategy:</p>
 												<p class="text-muted">{{profile.interests}}</p>
