--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -36,6 +36,7 @@ small,
   margin: 10px 5px 10px 0;
   border-radius: 2px;
 }
+
 @media (min-width: 1024px) {
 	.container {
 		width: 970px;
@@ -52,6 +53,27 @@ small,
 		width: 100%;
 		}
 }
+
+
+.container-members {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+@media (min-width: 800px) {
+	.container-members {
+		width: 700px;
+	}
+}
+
+@media (max-width: 700px) {
+.container-members {
+		width: 100%;
+		}
+}
+
 
 hr {
 		max-width: 50px;
