Members small: Interests with no-spacing-top

--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -512,6 +512,11 @@ section {
 
 }
 
+@media (max-width: 767px) {
+    .no-spacing-top {
+        padding-top: 0!important;
+    }
+}
 
 
 .extra-spacing-bottom {
