--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -102,7 +102,7 @@
                     </div>
 								</div>
 						</div>
-						<div class="col-sm-6">
+						<div class="col-sm-6 no-spacing-top">
 								<div class="media-body">
 										<p class="interests">Interests regarding Open Strategy:</p>
 										<p class="text-muted">{{profile.interests}}</p>
