--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -366,7 +366,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-		color: darken(@brand-primary, 10%);
+		color: darken(@brand-primary, 10%)!important;
 }
 
 
