Solved: Members email link added hover-color

--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -343,6 +343,9 @@ a:not(.btn):link {
 		margin-bottom: 6px;
 }
 
+a:not(.btn):link:hover{
+    color: darken(@brand-primary, 10%);
+}
 
 a,
 a:hover,
