--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -72,11 +72,11 @@ related news are warmly welcome. In order to add news to this section, please se
 <template name="newsitem">
   <div class="col-md-4 col-sm-6">
     <div class="caption">
-        {{#if category}}
+        <!-- {{#if category}}
         <div class="category">
             <em>{{category}}</em><br>
         </div>
-        {{/if}}
+        {{/if}} -->
         {{#if imageExists}}
         <h4>{{title}}</h4>
         <img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" />
