Globally renaming News & Events to News

--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -5,15 +5,15 @@
         <!-- Breadcrumb -->
         <ol class="breadcrumb text-left">
             <li><a class="breadcrumb-link" href="{{pathFor route = 'home'}}">Home</a></li>
-            <li class="active">News &amp; Events</li>
+            <li class="active">News</li>
         </ol><!-- End of Breadcrumb -->
 
         <div class="header-content-inner">
-            <h1>News &amp; Events</h1>
+            <h1>News</h1>
             <hr>
-            <h2>News &amp; Events is a repository of upcoming events, workshops or general announcements related to
+            <h2>News is a repository of upcoming events, workshops or general announcements related to
 
-Open Strategy. News &amp; Events is designed to be dynamic and collaborative, so any Open Strategy
+Open Strategy. News is designed to be dynamic and collaborative, so any Open Strategy
 
 related news are warmly welcome. In order to add news to this section, please send as an email.</h2>
         </div>
