--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -11,17 +11,19 @@
         <div class="header-content-inner">
             <h1>News</h1>
             <hr>
-            <h2>News is a repository of upcoming events, workshops or general announcements related to
-
-Open Strategy. News is designed to be dynamic and collaborative, so any Open Strategy
-
-related news are warmly welcome. In order to add news to this section, please send as an email.</h2>
+            <h2>
+            News is a repository of upcoming events, workshops or general
+            announcements related to Open Strategy. News is designed to be dynamic
+            and collaborative, so any Open Strategy related news are warmly welcome.
+            In order to add news to this section, please send as an email.
+            </h2>
         </div>
     </div>
   </header> <!-- ./Stage -->
 
   <!-- FILTER -->
-  <section id="Filter">
+  <!-- Currently not needed -->
+  <!-- <section id="Filter">
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-12">
@@ -33,7 +35,8 @@ related news are warmly welcome. In order to add news to this section, please se
             </div>
         </div>
     </div>
-  </section> <!-- ./FILTER -->
+  </section>  -->
+  <!-- ./FILTER -->
 
 	<!-- News&Events -->
 	<section id="News">
