--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -212,7 +212,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
                         <label for="text">Website</label>
-                        <input type="text" id="website" class="form-control" placeholder="Website/Blog" value="{{profile.website}}" >
+                        <input type="text" id="website" class="form-control" placeholder="Your Website" value="{{profile.website}}" >
                     </div>
                 </div>
               </div>
@@ -221,7 +221,7 @@
               <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                   <div class="form-group">
                     <label for="text">Blog</label>
-                    <input type="text" id="blog" class="form-control" placeholder="Google" value="{{profile.blog}}">
+                    <input type="text" id="blog" class="form-control" placeholder="Your Blog" value="{{profile.blog}}">
                   </div>
               </div>
             </div>
