adding google scholar to member and profile settings

--- a/client/templates/admin/member-edit.html
+++ b/client/templates/admin/member-edit.html
@@ -192,6 +192,15 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
+                        <label for="text">Google Scholar <a class="button-download btn btn-primary btn-sm btn-external-link" href="https://scholar.google.com/"><i class="fa fa-external-link"></i> </a></label>
+                        <input type="text"  id="scholar" class="form-control" value="{{profile.scholar}}" placeholder="https://scholar.google.com/yourscholarlink/">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
+                    <div class="form-group">
                         <label for="text">Twitter <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.twitter.com"><i class="fa fa-external-link"></i> </a></label>
                         <input type="text"  id="twitter" class="form-control" value="{{profile.twitter}}" placeholder="https://twitter.com/YOURTWITTERHANDLER">
                     </div>
@@ -211,7 +220,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
                       <label for="text">Facebook <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.facebook.com"><i class="fa fa-external-link"></i> </a></label>
-                      <input type="text" id="facebook" class="form-control" value="{{profile.facebook}}" placeholder="https://www.facebook.com/YOURTWITTERUSERNAME">
+                      <input type="text" id="facebook" class="form-control" value="{{profile.facebook}}" placeholder="https://www.facebook.com/YOURFACEBOOKRUSERNAME">
                   </div>
                 </div>
               </div>
