--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -229,6 +229,15 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
+                        <label for="text">Google Scholar <a class="button-download btn btn-primary btn-sm btn-external-link" href="https://scholar.google.com/"><i class="fa fa-external-link"></i> </a></label>
+                        <input type="text"  id="scholar" class="form-control" value="{{profile.scholar}}" placeholder="https://scholar.google.com/yourscholarlink/">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
+                    <div class="form-group">
                         <label for="text">Twitter <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.twitter.com" target="_blank" alt="Go to Twitter"><i class="fa fa-external-link"></i> </a></label>
                         <input type="text"  id="twitter" class="form-control" value="{{profile.twitter}}" placeholder="https://twitter.com/YOURTWITTERHANDLER">
                     </div>
