--- a/client/templates/admin/admin-publications.html
+++ b/client/templates/admin/admin-publications.html
@@ -133,7 +133,12 @@
         </div>
       </div>
 			{{/if}}
-      
+      <div class="form-group">
+       <label for="coverImage" class="col-sm-2 control-label">Image</label>
+       <div class="col-sm-10">
+           <input type="file" id="coverImage">
+       </div>
+     </div>
       <div class="form-group">
        <label for="attachment" class="col-sm-2 control-label">Attachment</label>
        <div class="col-sm-10">
